--- a/config_template/sb-config-1.13.json
+++ b/config_template/sb-config-1.13.json
@@ -89,13 +89,13 @@
       "tag": "wg-ep",
       "mtu": 1280,
       "address": "10.8.0.5/24",
-      "private_key": "8A0S2AG7D+b8uRI14Np2xrasvJVVk/gwOZ1pYI7fCGk=",
+      "private_key": "",
       "peers": [
         {
           "address": "wg.aabbye.com",
           "port": 34567,
-          "public_key": "Di0gZI/RQfiI4911+J4fHpVWjdfaY7UL6G+aiiC40Bw=",
-          "pre_shared_key": "/BMKpWO7znUGokIUd0aNOFKqr6Xkr6Oj77yVQJt9r48=",
+          "public_key": "",
+          "pre_shared_key": "",
           "allowed_ips": [
             "0.0.0.0/0"
           ],
