--- a/config_template/sb-config-1.13.json
+++ b/config_template/sb-config-1.13.json
@@ -92,7 +92,7 @@
       "private_key": "",
       "peers": [
         {
-          "address": "wg.aabbye.com",
+          "address": "wg.xx.com",
           "port": 34567,
           "public_key": "",
           "pre_shared_key": "",
